@@ -3,6 +3,7 @@ procps-ng-NEXT
     Re-add elogind support                                 merge #151
   * ps: threads again display when -L is used with -q      issue #234
   * ps: proper aix format string behavior was restored
+  * sysctl: print dotted keys again
 
 procps-ng-4.0.0
 ---------------
